# PatchPilot

./: .gitignore  pyproject.toml
examples/broken_pricing_repo/.patchpilot/: patchpilot_failures.json  patchpilot_repairs.json
examples/broken_pricing_repo/src/pricing/: calc.py
examples/broken_pricing_repo/tests/: test_pricing.py
patchpilot/: ast_context.py  cli.py  failure_parser.py  models.py  patch_agent.py  patch_apply.py  patch_validator.py  repair_packet.py  runner.py  verifier.py
patchpilot/prompts/: repair_prompt.md  revise_prompt.md
tests/: conftest.py  test_patch_agent.py  test_patch_apply.py  test_patch_validator.py  test_verifier.py
